# cheznav

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  demo.tape  justfile  prek.toml  pyproject.toml
.github/workflows/: pytest.yml  python-publish.yml  ruff.yml
src/cheznav/: __init__.py  chezmoi.py  cheznav.tcss  main.py  theme.py  utils.py
src/cheznav/widgets/: __init__.py  action_menu.py  confirm.py  content.py  diff.py  header.py  help.py  home_tree.py  managed_tree.py
tests/: conftest.py  test_action_menu.py  test_check_action.py  test_chezmoi.py  test_confirm.py  test_diff.py  test_diff_accept.py  test_git_dirty_labels.py  test_language_detection.py  test_partition.py  test_post_accept_nav.py  test_snapshots.py  test_theme.py
